--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       name: '',
       repo: '',
       loadSidebar: true,
-      subMaxLevel: 2,
+      subMaxLevel: 6,
       loadNavbar: true,
-      coverpage: true
+      coverpage: true,
+      onlyCover: true
     }
   </script>
   <!-- Docsify v4 -->
